docs: alinha o dossie ao que o codigo realmente faz
O dossie afirmava 80 testes com 0 erros enquanto a suite quebrava 6 na
maquina do autor, documentava limiares de decisao que o codigo nunca
implementou e descrevia uma modelagem 3FN que nenhum controller
alcancava.

- Contagem de testes 80 -> 88 e Flyway V1-V12 -> V1-V14, com nota sobre
  os flags de JDK que mantem a suite verde em Java 21 e 26.
- Ficha do motor canino corrigida: 21 features (14 categoricas) -> 16
  efetivas (10 categoricas); o limiar documentado dizia que P >= 0.60
  dava escore >= 80, o que nunca foi verdade. Explicitado que o ROC-AUC
  qualifica a probabilidade, nao o escore exibido ao tutor.
- Adicionadas as limitacoes declaradas do modelo: entradas derivadas por
  regra em vez de medidas, vies de indicacao das visitas ao veterinario e
  a remocao da feature de temperatura em escala trocada.
- Documentada a integracao do checkout com o ledger normalizado, a fonte
  unica da economia e o registro contabil do prejuizo do piso.
- Removidas as referencias ao wrapper PredictiveMlEngine, que nao existe
  mais, inclusive no diagrama de classes.
- Nova secao 12 declarando as lacunas conhecidas: ausencia de perfil
  ROLE_CLINICA, liquidacao sem gatilho de UI, gateway simulado e dataset
  sintetico.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>